# trees-everywhere

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: settings.py  urls.py  wsgi.py
src/apps/core/: admin.py  models.py  serializers.py  views.py
src/apps/core/fixtures/: admin.json
src/apps/core/migrations/: 0001_initial.py  0002_tree_plantedtree.py  0003_alter_plantedtree_age.py
tests/apps/core/unit/: test_user_plant_tree.py
